// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fraud protection rule card notice tests renders error box correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="fraud-protection-rule-card-notice fraud-protection-rule-card-notice-error"
      >
        <div
          class="fraud-protection-rule-card-notice-icon"
        >
          <svg
            data-testid="rule-card-notice-error-icon-svg"
            fill="none"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9 1.75C4.99594 1.75 1.75 4.99594 1.75 9C1.75 13.0041 4.99594 16.25 9 16.25C13.0041 16.25 16.25 13.0041 16.25 9C16.25 4.99594 13.0041 1.75 9 1.75ZM0.25 9C0.25 4.16751 4.16751 0.25 9 0.25C13.8325 0.25 17.75 4.16751 17.75 9C17.75 13.8325 13.8325 17.75 9 17.75C4.16751 17.75 0.25 13.8325 0.25 9Z"
              fill="#CC1818"
              fill-rule="evenodd"
            />
            <path
              d="M10 4H8V10H10V4Z"
              fill="#CC1818"
            />
            <path
              d="M10 12H8V14H10V12Z"
              fill="#CC1818"
            />
          </svg>
        </div>
        <div
          class="fraud-protection-rule-card-notice-text"
        >
          This is the test content
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fraud-protection-rule-card-notice fraud-protection-rule-card-notice-error"
    >
      <div
        class="fraud-protection-rule-card-notice-icon"
      >
        <svg
          data-testid="rule-card-notice-error-icon-svg"
          fill="none"
          height="18"
          viewBox="0 0 18 18"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M9 1.75C4.99594 1.75 1.75 4.99594 1.75 9C1.75 13.0041 4.99594 16.25 9 16.25C13.0041 16.25 16.25 13.0041 16.25 9C16.25 4.99594 13.0041 1.75 9 1.75ZM0.25 9C0.25 4.16751 4.16751 0.25 9 0.25C13.8325 0.25 17.75 4.16751 17.75 9C17.75 13.8325 13.8325 17.75 9 17.75C4.16751 17.75 0.25 13.8325 0.25 9Z"
            fill="#CC1818"
            fill-rule="evenodd"
          />
          <path
            d="M10 4H8V10H10V4Z"
            fill="#CC1818"
          />
          <path
            d="M10 12H8V14H10V12Z"
            fill="#CC1818"
          />
        </svg>
      </div>
      <div
        class="fraud-protection-rule-card-notice-text"
      >
        This is the test content
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Fraud protection rule card notice tests renders info box correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="fraud-protection-rule-card-notice fraud-protection-rule-card-notice-info"
      >
        <div
          class="fraud-protection-rule-card-notice-icon"
        >
          <svg
            data-testid="rule-card-notice-info-icon-svg"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="9"
              r="5"
              stroke="#007CBA"
              stroke-width="1.42857"
            />
            <line
              stroke="#007CBA"
              stroke-width="1.5"
              x1="9"
              x2="15"
              y1="16.8818"
              y2="16.8818"
            />
            <line
              stroke="#007CBA"
              stroke-width="1.5"
              x1="10"
              x2="14"
              y1="19.25"
              y2="19.25"
            />
          </svg>
        </div>
        <div
          class="fraud-protection-rule-card-notice-text"
        >
          This is the test content
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fraud-protection-rule-card-notice fraud-protection-rule-card-notice-info"
    >
      <div
        class="fraud-protection-rule-card-notice-icon"
      >
        <svg
          data-testid="rule-card-notice-info-icon-svg"
          fill="none"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="9"
            r="5"
            stroke="#007CBA"
            stroke-width="1.42857"
          />
          <line
            stroke="#007CBA"
            stroke-width="1.5"
            x1="9"
            x2="15"
            y1="16.8818"
            y2="16.8818"
          />
          <line
            stroke="#007CBA"
            stroke-width="1.5"
            x1="10"
            x2="14"
            y1="19.25"
            y2="19.25"
          />
        </svg>
      </div>
      <div
        class="fraud-protection-rule-card-notice-text"
      >
        This is the test content
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Fraud protection rule card notice tests renders warning box correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="fraud-protection-rule-card-notice fraud-protection-rule-card-notice-warning"
      >
        <div
          class="fraud-protection-rule-card-notice-icon"
        >
          <svg
            data-testid="rule-card-notice-warning-icon-svg"
            fill="none"
            height="18"
            viewBox="0 0 18 18"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9 1.75C4.99594 1.75 1.75 4.99594 1.75 9C1.75 13.0041 4.99594 16.25 9 16.25C13.0041 16.25 16.25 13.0041 16.25 9C16.25 4.99594 13.0041 1.75 9 1.75ZM0.25 9C0.25 4.16751 4.16751 0.25 9 0.25C13.8325 0.25 17.75 4.16751 17.75 9C17.75 13.8325 13.8325 17.75 9 17.75C4.16751 17.75 0.25 13.8325 0.25 9Z"
              fill="#bd8600"
              fill-rule="evenodd"
            />
            <path
              d="M10 4H8V10H10V4Z"
              fill="#bd8600"
            />
            <path
              d="M10 12H8V14H10V12Z"
              fill="#bd8600"
            />
          </svg>
        </div>
        <div
          class="fraud-protection-rule-card-notice-text"
        >
          This is the test content
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fraud-protection-rule-card-notice fraud-protection-rule-card-notice-warning"
    >
      <div
        class="fraud-protection-rule-card-notice-icon"
      >
        <svg
          data-testid="rule-card-notice-warning-icon-svg"
          fill="none"
          height="18"
          viewBox="0 0 18 18"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M9 1.75C4.99594 1.75 1.75 4.99594 1.75 9C1.75 13.0041 4.99594 16.25 9 16.25C13.0041 16.25 16.25 13.0041 16.25 9C16.25 4.99594 13.0041 1.75 9 1.75ZM0.25 9C0.25 4.16751 4.16751 0.25 9 0.25C13.8325 0.25 17.75 4.16751 17.75 9C17.75 13.8325 13.8325 17.75 9 17.75C4.16751 17.75 0.25 13.8325 0.25 9Z"
            fill="#bd8600"
            fill-rule="evenodd"
          />
          <path
            d="M10 4H8V10H10V4Z"
            fill="#bd8600"
          />
          <path
            d="M10 12H8V14H10V12Z"
            fill="#bd8600"
          />
        </svg>
      </div>
      <div
        class="fraud-protection-rule-card-notice-text"
      >
        This is the test content
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
